# ChangeLog for games-simulation/gl117
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-simulation/gl117/ChangeLog,v 1.13 2005/01/25 07:00:22 mr_bones_ Exp $

  25 Jan 2005; Michael Sterrett <mr_bones_@gentoo.org> -gl117-1.2.ebuild,
  gl117-1.3.1.ebuild, -gl117-1.3.ebuild:
  fix HOMEPAGE; clean old ebuilds

*gl117-1.3.1 (20 Dec 2004)

  20 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> +gl117-1.3.1.ebuild:
  version bump - bug #71350

  11 Sep 2004; <blubb@gentoo.org> gl117-1.3.ebuild:
  added ~amd64

*gl117-1.3-r1 (13 Jun 2004)

  13 Jun 2004; <mkennedy@gentoo.org> +files/1.3-gcc-3.4-gentoo.patch,
  +gl117-1.3-r1.ebuild:
  Patch to get a successful build with GCC 3.4.0

*gl117-1.3 (12 Jun 2004)

  12 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> gl117-1.3.ebuild:
  version bump (bug #53743)

  27 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> gl117-1.2.ebuild:
  fix IUSE

  27 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> gl117-1.0.ebuild,
  gl117-1.1.ebuild:
  tidy old versions

*gl117-1.2 (26 Feb 2004)

  26 Feb 2004; Michael Sterrett <mr_bones_@gentoo.org> gl117-1.2.ebuild:
  version bump (bug #42992)

  04 Feb 2004; David Holm <dholm@gentoo.org> gl117-1.1.ebuild:
  Added to ~ppc.

*gl117-1.1 (11 Jan 2004)

  11 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> gl117-1.1.ebuild:
  version bump (bug 37876)

*gl117-1.0 (22 Aug 2003)

  22 Aug 2003; Michael Sterrett <msterret@gentoo.org> gl117-1.0.ebuild:
  version bump.  Patch from Olivier Migeot via bug 27134.

  12 Jul 2003; Michael Sterrett <msterret@gentoo.org> gl117-0.9.ebuild:
  fix DESCRIPTION

*gl117-0.9 (07 Jul 2003)

  07 Jul 2003; Michael Sterrett <msterret@gentoo.org> gl117-0.9.ebuild:
  Initial commit. (bug 23315 - user submitted ebuild wasn't used)
