@@ -1,5 +1,7 @@
 MD5 4af158d03edc495473ff8972336fe0ce ChangeLog 1821
+MD5 b5b783c0cf161a6ca9d772a8953368d2 gl117-1.3.2.ebuild 728
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 MD5 b5b783c0cf161a6ca9d772a8953368d2 gl117-1.3.1.ebuild 728
 MD5 740021d7a24b2fea8872736b7e081ae9 files/digest-gl117-1.3.1 70
+MD5 bfe91e613f3235365f1d485993995f6a files/digest-gl117-1.3.2 70
 MD5 dbc181b31b75b84a681b2d278a214165 files/1.3-gcc-3.4-gentoo.patch 1388
