@@ -1,0 +1,30 @@
+# Copyright 1999-2005 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/gl117/gl117-1.3.2.ebuild,v 1.1 2005/03/14 00:30:51 mr_bones_ Exp $
+
+inherit games eutils
+
+MY_P="gl-117-${PV}-src"
+DESCRIPTION="An action flight simulator"
+HOMEPAGE="http://www.heptargon.de/"
+SRC_URI="mirror://sourceforge/gl-117/${MY_P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc x86"
+IUSE=""
+
+DEPEND="virtual/x11
+	media-libs/libsdl
+	media-libs/sdl-mixer
+	virtual/opengl
+	virtual/glu
+	virtual/glut"
+
+S="${WORKDIR}/${MY_P}"
+
+src_install() {
+	make DESTDIR="${D}" install || die "make install failed"
+	dodoc AUTHORS ChangeLog FAQ NEWS README
+	prepgamesdirs
+}
