@@ -1,6 +1,11 @@
 # ChangeLog for games-simulation/gl117
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-simulation/gl117/ChangeLog,v 1.13 2005/01/25 07:00:22 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/gl117/ChangeLog,v 1.14 2005/03/14 00:30:51 mr_bones_ Exp $
+
+*gl117-1.3.2 (13 Mar 2005)
+
+  13 Mar 2005; Michael Sterrett <mr_bones_@gentoo.org> +gl117-1.3.2.ebuild:
+  version bump
 
   25 Jan 2005; Michael Sterrett <mr_bones_@gentoo.org> -gl117-1.2.ebuild,
   gl117-1.3.1.ebuild, -gl117-1.3.ebuild:
